# search-api-webui

./: .gitignore  LICENSE  README.md  RULES.md  build_release.sh  providers.yaml  pyproject.toml  user_config.json.example
backend/: app.py  provider.py
backend/providers/: __init__.py  base.py  generic.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  ArenaPage.jsx  ConfigPage.jsx  SearchPage.jsx  main.jsx
frontend/src/components/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  ResultItem.jsx
frontend/src/lib/: utils.js
search_api_webui/: __init__.py  app.py  providers.yaml
search_api_webui/providers/: __init__.py  base.py  generic.py  querit.py
