[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-api-webui"
version = "0.1.0"
description = "A Search API WebUI for Querit, You, and other search providers."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Search API WebUI Team" }
]
keywords = ["search", "api", "webui", "querit", "llm", "tool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
]

dependencies = [
    "flask>=2.0.0",
    "flask-cors",
    "requests>=2.25.0",
    "pyyaml>=6.0",
    "jmespath",
    "querit"
]

[project.urls]
Homepage = "https://github.com/querit-ai/search-api-webui"
Repository = "https://github.com/querit-ai/search-api-webui.git"
Issues = "https://github.com/querit-ai/search-api-webui/issues"

[project.scripts]
search-api-webui = "backend.app:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = [
    "backend",
    "providers.yaml",
    "README.md",
    "LICENSE"
]
exclude = [
    "frontend",
    "user_config.json",
    ".github"
]

[tool.hatch.build.targets.wheel.force-include]
"backend/static" = "backend/static"
"providers.yaml" = "backend/providers.yaml"
